# be/docs/openapi.yaml
@@ -81,6 +81,16 @@ paths:
     $ref: './paths/commerce.yaml#/~1lessons~1{id}'
   /media/token/{videoId}:
     $ref: './paths/commerce.yaml#/~1media~1token~1{videoId}'
+  /nodes/{id}/quizzes:
+    $ref: './paths/student_quiz.yaml#/~1nodes~1{id}~1quizzes'
+  /quizzes/{id}/questions:
+    $ref: './paths/student_quiz.yaml#/~1quizzes~1{id}~1questions'
+  /quizzes/{id}/attempts:
+    $ref: './paths/student_quiz.yaml#/~1quizzes~1{id}~1attempts'
+  /attempts/{id}:
+    $ref: './paths/student_quiz.yaml#/~1attempts~1{id}'
+  /nodes/{id}/progress:
+    $ref: './paths/student_progress.yaml#/~1nodes~1{id}~1progress'
 components:
   securitySchemes:
     bearerAuth:
@@ -144,6 +154,22 @@ components:
       $ref: './components/schemas/assessment.yaml#/QuestionResponse'
     BulkQuestionsRequest:
       $ref: './components/schemas/assessment.yaml#/BulkQuestionsRequest'
+    StudentAnswerOption:
+      $ref: './components/schemas/assessment.yaml#/StudentAnswerOption'
+    StudentQuestionResponse:
+      $ref: './components/schemas/assessment.yaml#/StudentQuestionResponse'
+    SubmitAnswerItem:
+      $ref: './components/schemas/assessment.yaml#/SubmitAnswerItem'
+    SubmitQuizRequest:
+      $ref: './components/schemas/assessment.yaml#/SubmitQuizRequest'
+    AttemptAnswerOption:
+      $ref: './components/schemas/assessment.yaml#/AttemptAnswerOption'
+    AttemptDetailQuestion:
+      $ref: './components/schemas/assessment.yaml#/AttemptDetailQuestion'
+    SubmitQuizResponse:
+      $ref: './components/schemas/assessment.yaml#/SubmitQuizResponse'
+    StudentQuizAttemptSummary:
+      $ref: './components/schemas/assessment.yaml#/StudentQuizAttemptSummary'
     AttachQuizRequest:
       $ref: './components/schemas/node_quiz.yaml#/AttachQuizRequest'
     TagResponse:
@@ -156,3 +182,7 @@ components:
       $ref: './components/schemas/tag.yaml#/AttachTagRequest'
     CourseTreeResponse:
       $ref: './components/schemas/curriculum.yaml#/CourseTreeResponse'
+    UpsertProgressRequest:
+      $ref: './components/schemas/curriculum.yaml#/UpsertProgressRequest'
+    ProgressResponse:
+      $ref: './components/schemas/curriculum.yaml#/ProgressResponse'
